# wcg-pdf-to-csv

./: .gitignore  README.md  pyproject.toml
src/: extract.py  group_by_votes.py  process_votes.py
